<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout style="@style/LinearLayoutStyle">
        <EditText
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/app_name"/>
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">
        <ImageView
            android:id="@+id/imageAttractions"
            style="@style/ImageViewStyle"
            android:src="@drawable/ic_baseline_folder_24"
            android:contentDescription="@string/image"/>
        <Button
            style="@style/ButtonStyle"
            android:text="@string/attractions" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">
        <ImageView
            android:id="@+id/imageDining"
            style="@style/ImageViewStyle"
            android:src="@drawable/ic_baseline_local_dining_24"
            android:contentDescription="@string/image"/>
        <Button
            style="@style/ButtonStyle"
            android:text="@string/dining" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">
        <ImageView
            android:id="@+id/imageEducation"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_cast_for_education_24"/>
        <Button
            style="@style/ButtonStyle"
            android:text="@string/education" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">
        <ImageView
            android:id="@+id/imageFamily"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_family_restroom_24"/>
        <Button
            style="@style/ButtonStyle"
            android:text="@string/family" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">
        <ImageView
            android:id="@+id/imageFire"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_local_fire_department_24" />
        <Button
            style="@style/ButtonStyle"
            android:text="@string/fire" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">
        <ImageView
            android:id="@+id/imageOfficeOffice"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_local_post_office_24"/>
        <Button
            style="@style/ButtonStyle"
            android:text="@string/office" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">
        <ImageView
            android:id="@+id/imagePromotion"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_shopping_cart_24" />
        <Button
            style="@style/ButtonStyle"
            android:text="@string/promotion" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">
        <ImageView
            android:id="@+id/imageRadio"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_radio_24" />
        <Button
            style="@style/ButtonStyle"
            android:text="@string/radio" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">
        <ImageView
            android:id="@+id/imageRecipes"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_receipt_24" />
        <Button
            style="@style/ButtonStyle"
            android:text="@string/recipes" />
    </LinearLayout>

    <LinearLayout style="@style/LinearLayoutStyle">
        <ImageView
            android:id="@+id/imageSports"
            style="@style/ImageViewStyle"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_sports_24" />
        <Button
            style="@style/ButtonStyle"
            android:text="@string/sports" />
    </LinearLayout>

</LinearLayout>
