<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Homework3">
    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/android"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/image"
            android:id="@+id/avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="20dp"
            android:background="@color/grey" />

        <LinearLayout
            style="@style/LinearLayoutAndroid">
            <TextView
                style="@style/PersonalData"
                android:layout_marginTop="20dp"
                android:text="@string/numberOfPosts">
            </TextView>

            <TextView
                style="@style/PersonalData"
                android:text="@string/posts">
            </TextView>
        </LinearLayout>
        <LinearLayout
           style="@style/LinearLayoutAndroid">
            <TextView
                style="@style/PersonalData"
                android:layout_marginTop="20dp"
                android:text="@string/numberOfFollowers">
            </TextView>

            <TextView
                style="@style/PersonalData"
                android:text="@string/followers">
            </TextView>
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutAndroid">
            <TextView
                style="@style/PersonalData"
                android:layout_marginTop="20dp"
                android:text="@string/numberOfFollowing">
            </TextView>

            <TextView
                style="@style/PersonalData"
                android:text="@string/following">
            </TextView>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PersonalData"
            android:text="@string/username">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/address">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/description">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <ImageView
            style="@style/GraySquarePictures"
            android:contentDescription="@string/image">
        </ImageView>
        <ImageView
            style="@style/GraySquarePictures"
            android:contentDescription="@string/image">
        </ImageView>
        <ImageView
            style="@style/GraySquarePictures"
            android:contentDescription="@string/image">
        </ImageView>
        <ImageView
            style="@style/GraySquarePictures"
            android:contentDescription="@string/image">
        </ImageView>
        <ImageView
            style="@style/GraySquarePictures"
            android:contentDescription="@string/image">
        </ImageView>
        <ImageView
            style="@style/GraySquarePictures"
            android:contentDescription="@string/image">
        </ImageView>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            style="@style/LinearLayoutBlue">
            <ImageView
               style="@style/ImageBlue"
                android:src="@drawable/ic_baseline_directions_24"
                android:contentDescription="@string/image"/>
            <TextView
                style="@style/TextBlue"
                android:text="@string/directions">
            </TextView>
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutBlue">
            <ImageView
                style="@style/ImageBlue"
                android:src="@drawable/ic_baseline_call_24"
                android:contentDescription="@string/image"/>
            <TextView
                style="@style/TextBlue"
                android:text="@string/call">
            </TextView>
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutBlue">
            <ImageView
                style="@style/ImageBlue"
                android:src="@drawable/ic_baseline_star_24"
                android:contentDescription="@string/image"/>
            <TextView
                style="@style/TextBlue"
                android:text="@string/save">
            </TextView>
        </LinearLayout>
        <LinearLayout
            style="@style/LinearLayoutBlue">
            <ImageView
                style="@style/ImageBlue"
                android:src="@drawable/ic_baseline_web_24"
                android:contentDescription="@string/image"/>
            <TextView
                style="@style/TextBlue"
                android:text="@string/website">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <ImageView
            android:contentDescription="@string/image"
            style="@style/GreyBig"/>
        <ImageView
            android:contentDescription="@string/image"
            style="@style/GreyBig"/>
        <ImageView
            android:contentDescription="@string/image"
            style="@style/GreyBig"/>
    </LinearLayout>
</LinearLayout>