<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:theme="@style/Theme.Homework3"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/sign"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold">
    </TextView>

    <EditText
        android:background="@drawable/rounding_figure"
        style="@style/TextEmail"
        android:hint="@string/email" />

    <EditText
        android:background="@drawable/rounding_figure"
        style="@style/TextEmail"
        android:hint="@string/password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox"
            style="@style/Small_Functional_Labels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember" />

        <TextView
            android:id="@+id/Forgot"
            style="@style/Small_Functional_Labels"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/forgot" />
    </LinearLayout>

    <Button
        android:background="@drawable/rounding_figure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/sign"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"/>

    <TextView
        style="@style/InputFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/just_sign_in"
        android:gravity="center"/>
</LinearLayout>
