<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Homework3">

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/sign"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold">
    </TextView>

    <EditText
        android:id="@+id/enterData"
        style="@style/TextEmail"
        android:layout_below="@id/sign_in"

        android:layout_marginStart="50dp"
        android:background="@drawable/rounding_figure"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/enterData2"
        style="@style/TextEmail"
        android:layout_below="@id/enterData"

        android:layout_marginStart="50dp"
        android:background="@drawable/rounding_figure"
        android:hint="@string/password" />

    <CheckBox
        android:id="@+id/checkBox"
        style="@style/Small_Functional_Labels"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/enterData2"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/remember" />

    <TextView
        android:id="@+id/Forgot"
        style="@style/Small_Functional_Labels"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/enterData2"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:text="@string/forgot" />

    <Button
        android:id="@+id/buttonSign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Forgot"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/rounding_figure"
        android:text="@string/sign"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <TextView
        style="@style/InputFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonSign"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/just_sign_in" />

</RelativeLayout>