<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:contentDescription="@string/photo"
        android:id="@+id/imagePhoto"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/grey" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf = "parent"
        android:layout_marginTop="50dp"
        android:text="@string/photo"
        android:textColor="@color/black"
        android:textSize="70sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <ImageView
        android:contentDescription="@string/photo"
        android:layout_width="80dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@id/imagePhoto"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="10dp"
        android:layout_gravity="end|bottom"
        android:src="@drawable/ic_baseline_photo_camera_24" />

    <EditText
        android:id="@+id/textTitle"
        style="@style/InputFields"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imagePhoto"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/textPrice"
        android:layout_marginTop="50dp"
        style="@style/InputFields"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:layout_constraintLeft_toLeftOf="@id/imagePhoto"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/price"/>

    <EditText
        android:id="@+id/textLocation"
        style="@style/InputFields"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:layout_constraintLeft_toRightOf="@id/textPrice"
        android:layout_marginStart="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"/>
    <EditText
        android:id="@+id/textDescription"
        style="@style/InputFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textPrice"
        app:layout_constraintLeft_toRightOf="@id/textPrice"
        android:layout_marginTop="50dp"
        android:hint="@string/description"/>

    <EditText
        android:id="@+id/textInventory"
        android:layout_marginTop="50dp"
        style="@style/InputFields"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        app:layout_constraintLeft_toLeftOf="@id/imagePhoto"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:hint="@string/inventory"/>

    <EditText
        android:id="@+id/textFinish"
        style="@style/InputFields"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/textDescription"
        app:layout_constraintLeft_toRightOf="@id/textInventory"
        android:layout_marginStart="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/weight"/>


</androidx.constraintlayout.widget.ConstraintLayout>